go in.  To see the full history, use  

svn log http://svn.ari.uni-heidelberg.de/svn/gavo/python/trunk/ | less

to see the gory details.  If anything not mentioned here breaks something
for you, we'd consider it a severe bug, though.

Version 0.9.8-pre2 (2016-11-29)

	* SODA/Datalink implementation is now considered stable.  Go forth and
	  make fabulous links and cutout services.  Check the datalink intro
	  in the reference documentation if you have a couple of minutes.

	* TAP_SCHEMA columns now has new column_index column.  Its addition should
	  be automatic as long as your TAP-published RDs are in order.

	* EPN-TAP 2.0 changed some column and parameter names, and the mixin
	  followed.  If you've already used EPN-TAP 2.0, you will have to re-import
	  your data and slightly adapt your RD (e.g., c1_min -> c1min, 
	  t_exp_min -> time_exp_min etc).

	* DaCHS now emits warnings for columns whose names are SQL or ADQL 
		reserved names (this includes popular items like area, size, and distance).
		Even if things have worked so far, please change these names.  We 
		guarantee you'll regret it if you don't.


Version 0.9.7 (2016-08-18)

	* Behaviour change: pythonCores no longer run in a file system sandbox 
		(can't do that thread-safely).

	* Support for SIAP version 2 (see tutorial for details)

	* The default VOTable version delivered is now VOTable 1.3 (actually,
	  it's been 1.3 for a while now, we just didn't declare it)

	* support for Obscore 1.1 (update should be automatic)

	* support for EPN-TAP 2.0 (manually change to the #table-2.0 mixin)

	* Obscore support is now at version 1.1

	* DaCHS now supports CORS for web-based UIs

	* DaCHS's ADQL cross matches should now have "good" query plans 
	  regardless or argument order (but are half as  fast as in previous.
	  "good" cases).

	* SCS services publishing TAP-readable tables now get an auxiliary
	  TAP publication automatically (you'll need to re-gavo pub them,